# flare

./: .gitignore  pyproject.toml
flare/: main.py
