[project]
name = "flare"
version = "0.1.0"
description = ""
authors = [
    {name = "KrKOo",email = "krkoo.123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "flare"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flare = "flare.main:main"


